--- a/Project/ui/view_hold.ui
+++ b/Project/ui/view_hold.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>731</height>
+    <height>800</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>800</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>View Held Receipts</string>
@@ -111,69 +117,6 @@
       <number>30</number>
      </property>
      <item>
-      <widget class="QFrame" name="viewHoldCustomerFrame">
-       <layout class="QHBoxLayout" name="searchLayout" stretch="1,2,1">
-        <property name="spacing">
-         <number>5</number>
-        </property>
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>0</number>
-        </property>
-        <item>
-         <widget class="QLabel" name="viewHoldSearchFieldLbl">
-          <property name="text">
-           <string>Search Customer :</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="viewHoldSearchLineEdit"/>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
-      </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
       <widget class="QTableWidget" name="receiptsTable">
        <property name="minimumSize">
         <size>
@@ -219,6 +162,46 @@
       </widget>
      </item>
      <item>
+      <widget class="QFrame" name="viewHoldCustomerFrame">
+       <layout class="QHBoxLayout" name="searchLayout" stretch="1,2">
+        <property name="spacing">
+         <number>15</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="viewHoldSearchFieldLbl">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Search Customer :</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="viewHoldSearchLineEdit"/>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -229,31 +212,41 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>20</height>
+         <height>40</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
+      <widget class="QLabel" name="viewHoldFieldLbl">
+       <property name="text">
+        <string>Select Receipt Action :</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QGroupBox" name="viewHoldGroupBox">
        <property name="title">
-        <string>Select Receipt Action</string>
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_actions">
         <property name="spacing">
          <number>10</number>
         </property>
         <property name="leftMargin">
-         <number>20</number>
+         <number>50</number>
         </property>
         <property name="topMargin">
-         <number>20</number>
+         <number>5</number>
         </property>
         <property name="rightMargin">
-         <number>20</number>
+         <number>0</number>
         </property>
         <property name="bottomMargin">
-         <number>20</number>
+         <number>10</number>
         </property>
         <item>
          <widget class="QRadioButton" name="viewHoldLoadRadioBtn">
@@ -283,26 +276,10 @@
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
       <widget class="QFrame" name="viewHoldNoteFrame">
-       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2,1">
+       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2">
         <property name="spacing">
-         <number>5</number>
+         <number>15</number>
         </property>
         <property name="leftMargin">
          <number>0</number>
@@ -318,6 +295,12 @@
         </property>
         <item>
          <widget class="QLabel" name="viewHoldNoteFieldLbl">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Note :</string>
           </property>
@@ -328,19 +311,6 @@
         </item>
         <item>
          <widget class="QLineEdit" name="viewHoldNoteLineEdit"/>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer_3">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </widget>
@@ -356,7 +326,7 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>15</height>
+         <height>20</height>
         </size>
        </property>
       </spacer>
